# auto_ros2

./: Cargo.toml  SOURCE_SCRIPT.bash  SOURCE_SCRIPT.fish  params.yaml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: aruco.md  network.md
docs/hardware/: sensors.md
lib/feedback/src/: lib.rs
lib/soro_gps/: Cargo.toml  README.md
lib/soro_gps/data_files/: inside_bay.sbf  minimal_sbf.sbf  outside_the_bay.sbf
lib/soro_gps/examples/: laptop.rs
lib/soro_gps/src/: error.rs  lib.rs
src/aruco/: README.md
src/aruco/aruco_node/: main.py  utils.py
src/aruco/test/: test_calc_object_pose.py
src/autonomous_node/: Cargo.toml
src/drive_launcher/launch/: drive.launch.py  ebox.launch.py  rover.launch.py
src/drive_launcher/params/: nav2.yaml  slam_toolbox.yaml
src/lights/: Cargo.toml
src/lights_node/: Cargo.toml
src/lights_node/src/: main.rs
src/maps_backend/: Cargo.toml
src/navigator/: package.xml
src/navigator/navigator_node/: coords.py  main.py  types.py
src/navigator/test/: test_coordinate_from_aruco_pose.py
src/navigator/utm_conversion_node/: main.py
src/navigator_node/navigator_node/: coords.py  main.py
src/see3cam/: package.xml
src/see3cam/launch/: see3cam.launch.py
src/see3cam/params/: v4l2_camera.yaml
src/sensors/: Cargo.toml  package.xml
src/sensors/src/: main.rs
src/simulator/: CMakeLists.txt
src/simulator/launch/: gazebo_only.launch.py  sim.launch.py
src/simulator/params/: bridge.yaml  camera.yaml
src/simulator/resource/: rover.urdf.xacro.xml  world.sdf.xml
src/simulator/simulator/: main.py
src/simulator/test/: test_launch_sim_works.py  test_tf_tree.py
src/soro_lidar/: README.md
src/soro_lidar/include/: unitree_lidar_ros2.h
src/soro_lidar/launch/: launch.py
src/soro_lidar/rviz/: view.rviz
src/wheels/: Cargo.toml
src/wheels_node/: CMakeLists.txt  Cargo.toml  package.xml
src/wheels_node/msg/: Wheels.msg
src/wheels_node/src/: main.rs
src/zed/launch/: zed.launch.py
(+20 files in other folders)
