[project]
name = "autonomous"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "opencv-contrib-python>=4.11.0.86",
    "scipy>=1.15.2",
    "geopy>=2.4.1",
    "transforms3d>=0.4.2",
    "simple-pid>=2.0.1",
]

[tool.uv.sources]
# if one python project depends on another, put it here!
#
# for now, though, it's empty. :D


[tool.uv.workspace]
members = ["src/navigator_node", "src/log_node", "src/soro_simulator_driver"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "basedpyright>=1.27.1",
    "colcon-cargo>=0.1.3",
    "colcon-common-extensions>=0.3.0",
    "colcon-ros-cargo>=0.2.0",
    "ruff>=0.9.4",
    "empy==3.3.4",
    "lark==1.2.2",
    "numpy>=2.2.2",
    "cst-lsp>=0.1.3",
]

[tool.basedpyright]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false
