[package]
name = "wheels_node"
version = "0.1.0"
edition = "2021"

[dependencies]
feedback = { git = "https://github.com/onkoe/feedback", version = "0.2.2", default-features = false }
futures-lite = { version = "2.6.0", default-features = false, features = ["alloc", "parking", "std"] }
log4rs = "1.3.0"
ros2-client = "0.7.6"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = [
    "macros",
    "rt",
    "tokio-macros",
    "tracing",
    "rt-multi-thread",
    "time",
    "sync"
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
